2021-02-08  David Faust  <david.faust@oracle.com>

	* libbpoke/pkl-anal.c: Forbid anonymous members in unions.
	* pickles/btf.pk (type BTF_Type): Give name to anonymous union member.
	* pickles/ctf.pk (type CTF_Type): Likewise.
	* pickles/dwarf-expr.pk (type Dwarf_Op): Likewise.
	* pickles/dwarf-frame.pk (type Dwarf_CFI): Likewise.
	* testsuite/poke.pkl/union-diag-8.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (pk_cmd_source_file): New function.
	(source_cmd): Define.
	* poke/pk-cmd.c (source_cmd): Define.
	(dot_cmds): Add source_cmd.
	* doc/poke.texi (source command): New section.

2021-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (print_help): --script to --source.
	Rename SCRIPT_ARG to SOURCE_ARG.
	(long_options): Likewise.
	(parse_args_2): Update accordingly.
	* doc/poke.texi (Invoking poke): Update accordingly.

2021-01-28  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* pickles/mbr.pk: New pickle.
	* pickles/Makefile.am (dist_pickles_DATA): Add `mbr.pk`.
	* testsuite/poke.pickles/mbr-test.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-01-28  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/pkl-gen.pks (struct_writer): Fix bit-offset of mapped
	integral struct.
	* testsuite/poke.map/maps-int-structs-21.pk: New test.
	* testsuite/poke.map/maps-int-structs-22.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-23.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-24.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-25.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-26.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-27.pk: Likewise.
	* testsuite/poke.map/maps-int-structs-28.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-01-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-env.c (get_registered): The empty string is never
	recognized as the name of a registered declaration.